test/data/syntax-errors/parameter-missing-type.ava
var thisFunction = function (x) -> x + 1;